[package]
name = "maxgraph-ffi"
version = "0.1.0"
authors = ["graphscope@alibaba-inc.com"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
maxgraph-runtime = { path = "../runtime" }
maxgraph-store = { path = "../store" }
gaia_pegasus = { path = "../../../research/engine/pegasus/pegasus", package = "pegasus" }
pegasus_network = { path = "../../../research/engine/pegasus/network" }
pegasus_server = { path = "../../../research/engine/pegasus/server" }
runtime_integration =  { path = "../../../research/query_service/ir/integrated" }
log = "0.3"
log4rs = "0.8.0"
tokio = { version = "1.0", features = ["macros", "sync"] }
