[package]
name = "gaia_runtime"
version = "0.1.0"
authors = ["BingqingLyu <lv_bingqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = "0.7"
abomonation_derive = "0.3"
bincode = "1.0.1"
byteorder = "1.3.1"
crossbeam-channel = "0.4.4"
crossbeam-queue = "0.1"
futures-cpupool = "0.1.8"
getopts = "0.2.14"
grpcio = "=0.4.1"
quote = "=1.0.1"
itertools = "0.7.8"
lazy_static = "1.2.0"
log = "0.3"
log4rs = "0.8.0"
maxgraph-common = { path = "../../rust-common" }
maxgraph-store = { path = "../store" }
maxgraph-server = { path = "../server" }
maxgraph-runtime = { path = "../runtime" }
protobuf = { version = "~2.0", features = ["with-bytes"] }
rand = "0.7.3"
regex = "1"
serde = "1.0.72"
serde_derive = "1.0.72"
serde_json = "1.0.3"
structopt = "0.2"
zookeeper = { git = "https://github.com/bonifaido/rust-zookeeper.git", rev = "fd222dd" }
lru_time_cache = "0.8.0"
pegasus = { path = "../Pegasus" }
libc = "0.2"

tokio = { version = "1.0", features = ["macros", "sync"] }
futures = { version = "0.3.0", features = ["thread-pool"] }
gaia_pegasus = { path = "../../../research/engine/pegasus/pegasus", package = "pegasus" }
pegasus_network = { path = "../../../research/engine/pegasus/network" }
pegasus_server = { path = "../../../research/engine/pegasus/server-v0" }
gremlin_core = { path = "../../../research/query_service/gremlin/gremlin_core" }
gs_gremlin = { path = "../../../research/query_service/gremlin/gs_gremlin" }

[dev-dependencies]
env_logger = "0.6"

[build-dependencies]
cmake = "0.1"
