[package]
name = "rpc_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
byteorder = "1.5.0"
tonic = { version = "0.8" }
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
toml = "0.5"
structopt = "0.3"
hyper = "0.14"
futures = "0.3.19"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
itertools = "0.10.2"
num = "0.4.1"
regex = "1.7.1"

[build-dependencies]
tonic-build = { version = "0.8" }

[features]
default = []
# set to generate code in place(generated codes are in current codebase);
gcip = []

[profile.release]
debug = true
